# HPC-Samples

./: README.md
CUDA/: CMakeLists.txt  README.md
CUDA/src/: Accelerator.cpp  Accelerator.h  Kernel.cu  Kernel.cuh  Main.cpp
OpenACC/: CMakeLists.txt  README.md
OpenACC/src/: Accelerator.cpp  Accelerator.h  Main.cpp
OpenMP/: CMakeLists.txt  README.md
OpenMP/src/: Main.cpp  Multiprocessor.cpp  Multiprocessor.h
